--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,15 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-
 [packages]
 flask = "*"
+flask-restful = "*"
 
 [requires]
 python_version = "3.7"
+
+[dev-packages]
+black = "*"
+
+[pipenv]
+allow_prereleases = true
